main.scss: fix scrollbars appearing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -21,6 +21,7 @@
   max-width: 210mm !important;
   font-size: revert;
   //padding: auto !important;
+  overflow-wrap: break-word !important;
 }
 
 a {
